# gnpsi

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  compile_protos.sh  gnpsi_deps.bzl  go.mod  go.sum  regenerate-files.sh
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: ci-cpp-build-gnmi.yml  ci-cpp-build.yml
bazel/: rules_proto_grpc-4.6.0-alias.patch
bazel/patches/: grpc-001-fix_file_watcher_race_condition.patch
proto/gnpsi/: BUILD.bazel  gnpsi.pb.cc  gnpsi.pb.go  gnpsi.pb.h  gnpsi.proto  gnpsi_grpc.pb.go  histogram.proto
server/: BUILD.bazel  gnpsi_relay_server.cc  gnpsi_relay_server.h  gnpsi_relay_server_test.cc  gnpsi_service_impl.cc  gnpsi_service_impl.h  mock_gnpsi_service_impl.h
