# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:common.bzl", "use_new_compilers")
# gnpsi defines a gRPC-based network packet sampling interface implemented on
# vendor network elements. It provides mechanisms for streaming packet
# samples/updates from the network element.
package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

use_new_compilers()

proto_library(
    name = "gnpsi_proto",
    srcs = ["gnpsi.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

cc_proto_library(
    name = "gnpsi_cc_proto",
    deps = [":gnpsi_proto"],
)

cc_grpc_library(
    name = "gnpsi_grpc_proto",
    srcs = [":gnpsi_proto"],
    generate_mocks = True,
    grpc_only = ["True"],
    deps = [":gnpsi_cc_proto"],
)

go_proto_library(
    name = "gnpsi_go_proto",
    compilers = [
        "go_protoc_gen_go",
        "go_protoc_gen_go_grpc",
    ],
    importpath = "github.com/openconfig/gnpsi/proto/gnpsi",
    proto = ":gnpsi_proto",
)

go_library(
    name = "gnpsi",
    embed = [":gnpsi_go_proto"],
    importpath = "github.com/openconfig/gnpsi/proto/gnpsi",
)